--- a/vercel.json
+++ b/vercel.json
@@ -8,6 +8,10 @@
     {
       "src": "api/test.py",
       "use": "@vercel/python"
+    },
+    {
+      "src": "api/simple.py",
+      "use": "@vercel/python"
     }
   ],
   "routes": [
@@ -18,6 +22,10 @@
     {
       "src": "/api/test",
       "dest": "/api/test.py"
+    },
+    {
+      "src": "/api/simple",
+      "dest": "/api/simple.py"
     }
   ]
 } 
