--- a/vercel.json
+++ b/vercel.json
@@ -6,11 +6,7 @@
       "use": "@vercel/python"
     },
     {
-      "src": "api/test.py",
-      "use": "@vercel/python"
-    },
-    {
-      "src": "api/simple.py",
+      "src": "api/health.py",
       "use": "@vercel/python"
     }
   ],
@@ -20,12 +16,8 @@
       "dest": "/api/email_processor.py"
     },
     {
-      "src": "/api/test",
-      "dest": "/api/test.py"
-    },
-    {
-      "src": "/api/simple",
-      "dest": "/api/simple.py"
+      "src": "/api/health",
+      "dest": "/api/health.py"
     }
   ]
 } 
