--- a/vercel.json
+++ b/vercel.json
@@ -8,6 +8,10 @@
     {
       "src": "api/health.py",
       "use": "@vercel/python"
+    },
+    {
+      "src": "api/basic.py",
+      "use": "@vercel/python"
     }
   ],
   "routes": [
@@ -18,6 +22,10 @@
     {
       "src": "/api/health",
       "dest": "/api/health.py"
+    },
+    {
+      "src": "/api/basic",
+      "dest": "/api/basic.py"
     }
   ]
 } 
